# andrej-karpathy-zero-to-hero

./: readme.md
1/: Untitled.ipynb  pyproject.toml
1/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
