[tool.poetry]
name = "1-micrograd"
version = "0.1.0"
description = ""
authors = ["Flávio Sousa <root@fjsousa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
